--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Springdemo
 spring.thymeleaf.cache=false
 server.port=8080
-welcome.message : From Aviz
 server.servlet.context-path=/springdemo
+welcome.message=From Aviz
