--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Springdemo
 spring.thymeleaf.cache=false
 server.port=8080
-server.servlet.context-path=/springdemo
+server.servlet.context-path=/Springdemo-0.0.1-SNAPSHOT
 welcome.message=From Aviz
